--- a/css/bbb.css
+++ b/css/bbb.css
@@ -55,7 +55,7 @@ body {
 }
 
 .bg-carousel-alt-b  {
-    background: url(https://sapientnyc.github.io/img/bg-carousel-alt-a.png) no-repeat center;
+    background: url(https://sapientnyc.github.io/img/bg-carousel-alt-b.png) no-repeat center;
     background-size: contain;
 }
 
@@ -168,17 +168,14 @@ body {
 .panel-heading {
     font-size: 28px;
     font-weight: 400;
-    max-width: 380px;
+    text-align: left;
 }
 
 .panel-text {
     font-size: 16px;
     font-weight: 300;
-    padding: .25rem 1.75rem;
-    max-width: 70%;
     margin: 0 auto;
-    text-align: center;
-
+    text-align: left;
 }
 
 .logo-responsive {
@@ -295,18 +292,10 @@ body {
 @media screen and (max-width: 780px) {
 
 
-    .bg-carousel-bad-ex {
+    .bg-carousel{
         background-size: auto 100%;
         background-position: right;
         height: 78px;
-    }
-
-    .bg-hero-slim:hover {
-        background: yellow;
-        transition: .12s all ease-in;
-        background: url(https://sapientnyc.github.io/img/bg-edit-desert.png) no-repeat center;
-        padding-top: calc(300 / 848 * 107%);
-        background-size: cover;
     }
 
     .panel-breaker-mid {
@@ -403,6 +392,10 @@ body {
 
 
 /*UTILS*/
+
+.relative {
+    position: relative;
+}
 
 
 
