--- a/css/bbb.css
+++ b/css/bbb.css
@@ -443,6 +443,21 @@ body {
         align-items: center;
     }
 
+    .merch-full-content {
+        position: static;
+        transform: none;
+        margin: 0 auto;
+        width: 50%;
+    }
+
+    .bg-merchandise {
+        background-size: auto 100%;
+    }
+
+    .ratio-merchandising {
+        display: none;
+    }
+
 
     .info-text-heading {
         font-weight: 800;
