--- a/css/bbb.css
+++ b/css/bbb.css
@@ -133,7 +133,7 @@ body {
 }
 
 .banner-logo {
-    max-width: 200px;
+    max-width: 310px;
     max-height: 200px;
     width: 100%;
     height: 100%;
@@ -221,7 +221,9 @@ body {
 
 .logo-responsive {
     max-width: 200px;
-    transition: .12s all ease-in
+    max-height: 165px;
+    width: auto;
+    height: auto;
 }
 
 .panel-breaker-mid {
@@ -290,7 +292,7 @@ body {
     }
 
     .logo-responsive {
-        max-width: 125px;
+        /* max-width: 125px; */
     }
 
     .panel-breaker-mid {
@@ -360,7 +362,10 @@ body {
     }
 
     .logo-responsive {
-        max-width: 100px;
+        max-width: 200px;
+        max-height: 165px;
+        width: auto;
+        height: auto;
     }
 
     .wrap-banner {
